--- a/lovelace/views/inactive/00_home_modern/group_casa.yaml
+++ b/lovelace/views/inactive/00_home_modern/group_casa.yaml
@@ -92,7 +92,7 @@
     - show_name: true
     - show_state: false
     - name: Dormitori
-    - entity:  binary_sensor.window_bedroom 
+    - entity:  binary_sensor.window_dormitori 
     - tap_action:
         action: more-info
     - state:
