--- a/lovelace/views/00_home.yaml
+++ b/lovelace/views/00_home.yaml
@@ -59,4 +59,4 @@ cards:
           ##    ALTRES    ##
           ##################
 
-          - !include 00_home/altres.yaml
+          # - !include 00_home/altres.yaml
