--- a/automations/heater/menjador/turn_on.yaml
+++ b/automations/heater/menjador/turn_on.yaml
@@ -12,7 +12,7 @@ trigger:
     entity_id: media_player.tele
     to: 'playing'
   - platform: state
-    entity_id: light.encimera
+    entity_id: switch.llum_cuina
     to: 'on'
   - platform: state
     entity_id: light.entrada
@@ -40,7 +40,7 @@ condition:
           entity_id: media_player.tele
           state: 'playing'
         - condition: state
-          entity_id: light.encimera
+          entity_id: switch.llum_cuina
           state: 'on'
         - condition: state
           entity_id: light.entrada
