--- a/automations/home_modes/inactivitat/timeout_create.yaml
+++ b/automations/home_modes/inactivitat/timeout_create.yaml
@@ -5,7 +5,7 @@ trigger:
   entity_id: media_player.tele
   to: 'off'
 - platform: state
-  entity_id: light.encimera
+  entity_id: switch.llum_cuina
   to: 'off'
 - platform: state
   entity_id: light.entrada
@@ -29,7 +29,7 @@ condition:
       entity_id: media_player.tele
       state: 'off'
     - condition: state
-      entity_id: light.encimera
+      entity_id: switch.llum_cuina
       state: 'off'
     - condition: state
       entity_id: light.entrada
