--- a/automations/sunset/sunset_entrada.yaml
+++ b/automations/sunset/sunset_entrada.yaml
@@ -13,7 +13,7 @@ condition:
           entity_id: media_player.tele
           state: 'playing'
         - condition: state
-          entity_id: light.encimera
+          entity_id: switch.llum_cuina
           state: 'on'
         - condition: state
           entity_id: light.entrada
