--- a/automations/sensors/dinningroom_window_opened copy.yaml
+++ b/automations/sensors/dinningroom_window_opened copy.yaml
@@ -1,4 +1,4 @@
-alias: Dinningroom - Open window
+alias: Menjador - Finestra oberta
 trigger:
 - entity_id: binary_sensor.window_dinningroom
   from: 'off'
@@ -6,6 +6,7 @@ trigger:
   to: 'on'
 condition: []
 action:
-- service: timer.start
-  data:
-    entity_id: timer.sensor_finestra_menjador_timeout
+- delay:
+    seconds: 1
+- service: climate.turn_off
+  entity_id: climate.dormitori
