Detect when someone enters/leaves home

--- a/automations/geolocation/track_test_notification.yaml
+++ b/automations/geolocation/track_test_notification.yaml
@@ -3,15 +3,19 @@ initial_state: false
 trigger:
   - platform: zone
     entity_id: device_tracker.aleix_mobil
-    zone: 
-      - zone.home
-      - zone.feina
+    zone: zone.home
     event: leave
   - platform: zone
     entity_id: device_tracker.aleix_mobil
-    zone: 
-      - zone.home
-      - zone.feina
+    zone: zone.home
+    event: enter
+  - platform: zone
+    entity_id: device_tracker.aleix_mobil
+    zone: zone.feina
+    event: leave
+  - platform: zone
+    entity_id: device_tracker.aleix_mobil
+    zone: zone.feina
     event: enter
 action:
   - data:
