--- a/automations/sensors/entrance_turn_on_light.yaml
+++ b/automations/sensors/entrance_turn_on_light.yaml
@@ -6,9 +6,15 @@ trigger:
     from: 'off'
     platform: state
     to: 'on'
+  - entity_id: binary_sensor.door_main_entrance
+    from: 'off'
+    platform: state
+    to: 'on'
 condition:
-  condition: or
-  conditions:
+  - condition: time
+    after: "06:30:00"
+  - condition: time
+    before: "23:59:00"
   - condition: state
     entity_id: input_select.home_mode
     state:
@@ -20,6 +26,7 @@ action:
   - service: light.turn_on
     data:
       entity_id: light.entrada
+  - wait_template: "{{ is_state('binary_sensor.motion_entrance', 'off') }}"
   - delay:
       minutes: 5
   - service: light.turn_off
