--- a/automations/sensors/kitchen_turn_on_light.yaml
+++ b/automations/sensors/kitchen_turn_on_light.yaml
@@ -2,13 +2,15 @@ alias: Cuina - Encendre llum amb moviment
 initial_state: true
 mode: restart
 trigger:
-  - entity_id: binary_sensor.motion_entrance 
+  - entity_id: binary_sensor.motion_kitchen 
     from: 'off'
     platform: state
     to: 'on'
 condition:
-  condition: or
-  conditions:
+  - condition: time
+    after: "06:30:00"
+  - condition: time
+    before: "22:30:00"
   - condition: state
     entity_id: input_select.home_mode
     state:
@@ -20,6 +22,7 @@ action:
   - service: switch.turn_on
     data:
       entity_id: switch.llum_cuina
+  - wait_template: "{{ is_state('binary_sensor.motion_kitchen', 'off') }}"
   - delay:
       minutes: 10
   - service: switch.turn_off
