--- a/devices/input_select.yaml
+++ b/devices/input_select.yaml
@@ -8,3 +8,16 @@ home_mode:
     - Simular activitat   # Mode especial per simular les rutines
   initial: Normal
   icon: mdi:robot
+
+
+## Zigbee2Mqtt
+
+zigbee2mqtt_log_level:
+  name: Zigbee2mqtt Log Level
+  options:
+    - debug
+    - info
+    - warn
+    - error
+  initial: info
+  icon: mdi:format-list-bulleted
