--- a/devices/lights.yaml
+++ b/devices/lights.yaml
@@ -1,9 +1,9 @@
-- platform: mqtt
-  name: 'Encimera'
-  command_topic: 'wifi/switch/cuina/set'
-  state_topic: 'wifi/switch/cuina'
-  brightness_state_topic: 'wifi/switch/cuina/brightness'
-  brightness_command_topic: 'wifi/switch/cuina/brightness/set'
-  payload_on: 'on'
-  payload_off: 'off'
-  retain: true
+# - platform: mqtt
+#   name: 'Encimera'
+#   command_topic: 'wifi/switch/cuina/set'
+#   state_topic: 'wifi/switch/cuina'
+#   brightness_state_topic: 'wifi/switch/cuina/brightness'
+#   brightness_command_topic: 'wifi/switch/cuina/brightness/set'
+#   payload_on: 'on'
+#   payload_off: 'off'
+#   retain: true
