--- a/lovelace/decluttering_templates/title_h1.yaml
+++ b/lovelace/decluttering_templates/title_h1.yaml
@@ -1,7 +1,7 @@
 card:
   type: markdown
   content: |
-    # [[title]]
+    [[title]]
   style: |
     ha-card {
       font-family: Roboto, 'Open Sans', sans-serif;
@@ -11,9 +11,8 @@ card:
       box-shadow: none;
       text-align: left;
       background: rgba(0,0,0,0);
-    }
-    h1 {
-      color: #333;
+      color: var(--card-header-text-color);;
       font-weight: 300 !important;
+      font-size: 2em;
       margin: 0px;
     }
