--- a/lovelace/resources.yaml
+++ b/lovelace/resources.yaml
@@ -53,3 +53,5 @@
   type: module
 - url: /hacsfiles/button-text-card/button-text-card.js
   type: module
+- url: 'https://fonts.googleapis.com/css?family=Raleway'
+  type: css
