--- a/lovelace/views/00_home/dispositius.yaml
+++ b/lovelace/views/00_home/dispositius.yaml
@@ -5,113 +5,64 @@ cards:
     variables:
       - title: Dispositius
 
-  - type: entities
-    show_header_toggle: false
+  - type: "custom:vertical-stack-in-card"
     style: |
       ha-card {
         margin-left: 5px;
         margin-right: 5px;
+        padding: 10px;
       }
-    entities:
-      - entity: light.mesa
-        name: Taula
-        show_state: false
-        icon: "mdi:ceiling-light"
-        type: "custom:multiple-entity-row"
-        entities:
-          - icon: "mdi:lightbulb-off-outline"
-            state_color: false
-            tap_action:
-              action: call-service
-              service: light.turn_off
-              service_data:
-                entity_id: light.mesa
-          - icon: "mdi:lightbulb-outline"
-            state_color: true
-            tap_action:
-              action: call-service
-              service: light.turn_on
-              service_data:
-                entity_id: light.mesa
-      - entity: light.sofa
-        name: Sofà
-        show_state: false
-        icon: "mdi:floor-lamp"
-        type: "custom:multiple-entity-row"
-        entities:
-          - icon: "mdi:lightbulb-off-outline"
-            state_color: false
-            tap_action:
-              action: call-service
-              service: light.turn_off
-              service_data:
-                entity_id: light.sofa
-          - icon: "mdi:lightbulb-outline"
-            state_color: true
-            tap_action:
-              action: call-service
-              service: light.turn_on
-              service_data:
-                entity_id: light.sofa
-      - entity: light.mesita
-        name: Tauleta
-        show_state: false
-        icon: "mdi:lightbulb"
-        type: "custom:multiple-entity-row"
-        entities:
-          - icon: "mdi:lightbulb-off-outline"
-            state_color: false
-            tap_action:
-              action: call-service
-              service: light.turn_off
-              service_data:
-                entity_id: light.mesita
-          - icon: "mdi:lightbulb-outline"
-            state_color: true
-            tap_action:
-              action: call-service
-              service: light.turn_on                 
-              service_data:
-                entity_id: light.mesita
-      - type: section
-      - entity: switch.llum_cuina
-        name: Marbre cuina
-        show_state: false
-        icon: "mdi:lightbulb"
-        type: "custom:multiple-entity-row"
-        entities:
-          - icon: "mdi:lightbulb-off-outline"
-            state_color: false
-            tap_action:
-              action: call-service
-              service: switch.turn_off
-              service_data:
-                entity_id: switch.llum_cuina
-          - icon: "mdi:lightbulb-outline"
-            state_color: true
-            tap_action:
-              action: call-service
-              service: switch.turn_on
-              service_data:
-                entity_id: switch.llum_cuina
-      - type: section
-      - entity: light.entrada
-        name: Entrada
-        show_state: false
-        icon: "mdi:lightbulb"
-        type: "custom:multiple-entity-row"
-        entities:
-          - icon: "mdi:lightbulb-off-outline"
-            state_color: false
-            tap_action:
-              action: call-service
-              service: light.turn_off
-              service_data:
-                entity_id: light.entrada
-          - icon: "mdi:lightbulb-outline"
-            state_color: true
-            tap_action:
-              action: call-service
-              service: light.turn_on
-              service_data:
-                entity_id: light.entrada
+    cards:
+      - type: custom:layout-card
+        layout: horizontal
+        min_columns: 5
+        max_columns: 5
+        column_width: 100px
+        justify_content: left
+        cards:
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - name: Taula
+              - show_name: true
+              - show_state: false 
+              - show_last_changed: false
+              - entity: light.mesa
+              - icon: "mdi:ceiling-light"
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - name: Sofà
+              - show_name: true
+              - show_state: false 
+              - show_last_changed: false
+              - entity: light.sofa
+              - icon: "mdi:floor-lamp"
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - name: Tauleta
+              - show_name: true
+              - show_state: false 
+              - show_last_changed: false
+              - entity: light.mesita
+              - icon: "mdi:lightbulb"
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - name: Cuina
+              - show_name: true
+              - show_state: false 
+              - show_last_changed: false
+              - entity: switch.llum_cuina
+              - icon: "mdi:lightbulb"
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - name: Entrada
+              - show_name: true
+              - show_state: false 
+              - show_last_changed: false
+              - entity: light.entrada
+              - icon: "mdi:lightbulb"
+
