--- a/lovelace/decluttering_templates/title_h2.yaml
+++ b/lovelace/decluttering_templates/title_h2.yaml
@@ -1,18 +1,19 @@
-card:
-  type: markdown
-  content: |
-    [[title]]
-  style: |
-    ha-card {
-      font-family: Roboto, 'Open Sans', sans-serif;
-      font-size: 100%;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-      text-align: left;
-      background: rgba(0,0,0,0);
-      color: var(--card-header-text-color);;
-      font-weight: 300 !important;
-      margin: 0px;
-      font-size: 1.5em;
-    }
+title_h2:
+  card:
+    type: markdown
+    content: |
+      [[title]]
+    style: |
+      ha-card {
+        font-family: Roboto, 'Open Sans', sans-serif;
+        font-size: 100%;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        text-align: left;
+        background: rgba(0,0,0,0);
+        color: var(--card-header-text-color);;
+        font-weight: 300 !important;
+        margin: 0px;
+        font-size: 1.5em;
+      }
