--- a/lovelace/decluttering_templates/nest_picture_button.yaml
+++ b/lovelace/decluttering_templates/nest_picture_button.yaml
@@ -1,31 +1,32 @@
-card:
-  entity: "[[entity]]"
-  entity_picture: "[[entity_picture]]"
-  show_entity_picture: true
-  show_icon: true
-  show_name: false
-  show_state: true
-  style: |
-    ha-card {
-      font-family: Roboto, 'Open Sans', sans-serif;
-      padding-top: 15px !important;
-      background-color: rgba(0, 0, 0, 0);
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-    }
-    img {
-      width: 100% !important;
-    }
-    #img-cell {
-      background-color: #F5F5F5;
-      border-radius: 50px;
-      height: 50px !important;
-      width: 50px !important;
-    }
-    #state {
-      padding-top: 5px;
-    }
-  tap_action:
-    action: more-info
-  type: "custom:button-card"
+nest_picture_button:
+  card:
+    entity: "[[entity]]"
+    entity_picture: "[[entity_picture]]"
+    show_entity_picture: true
+    show_icon: true
+    show_name: false
+    show_state: true
+    style: |
+      ha-card {
+        font-family: Roboto, 'Open Sans', sans-serif;
+        padding-top: 15px !important;
+        background-color: rgba(0, 0, 0, 0);
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+      }
+      img {
+        width: 100% !important;
+      }
+      #img-cell {
+        background-color: #F5F5F5;
+        border-radius: 50px;
+        height: 50px !important;
+        width: 50px !important;
+      }
+      #state {
+        padding-top: 5px;
+      }
+    tap_action:
+      action: more-info
+    type: "custom:button-card"
